--- a/Fontes/ServicePortal/DTO/DTO.csproj
+++ b/Fontes/ServicePortal/DTO/DTO.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Configuracao\Configuracao.cs" />
     <Compile Include="Configuracao\ConfiguracaoResponse.cs" />
     <Compile Include="Conteudo\Conteudo.cs" />
+    <Compile Include="EmailTemplate\EmailTemplate.cs" />
+    <Compile Include="EmailTemplate\EmailTemplateResponse.cs" />
     <Compile Include="Mailing\MailingDTO.cs" />
     <Compile Include="Mailing\MailingResponse.cs" />
     <Compile Include="Menu\ListaMenuRequest.cs" />
