- Alteração no gerenciador de Template de E-mail para exibir as possíveis Tags - Implementado o validador de Nível de Segurança da Senha. - Implementada sugestão de login (via proc) para novos usuários. - Validação de existência do e-mail informado na criação da conta do usuário.

--- a/Fontes/BackofficeCMS/BackofficeCMS/BackofficeCMS.csproj
+++ b/Fontes/BackofficeCMS/BackofficeCMS/BackofficeCMS.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>BackofficeCMS</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -2953,7 +2953,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49164</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49163/</IISUrl>
+          <IISUrl>http://localhost/BackofficeCMS</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
