--- a/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
+++ b/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\ContatoController.cs" />
     <Compile Include="Controllers\ConteudoController.cs" />
     <Compile Include="Controllers\EventosController.cs" />
+    <Compile Include="Controllers\GaleriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InternaController.cs" />
     <Compile Include="Controllers\LembrarSenhaController.cs" />
@@ -436,6 +437,7 @@
     <Content Include="Views\MinhaConta\Index.cshtml" />
     <Content Include="Views\MinhaConta\RecuperarSenha.cshtml" />
     <Content Include="Views\LembrarSenha\Index.cshtml" />
+    <Content Include="Views\Galeria\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
