--- a/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
+++ b/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
@@ -438,6 +438,7 @@
     <Content Include="Views\MinhaConta\RecuperarSenha.cshtml" />
     <Content Include="Views\LembrarSenha\Index.cshtml" />
     <Content Include="Views\Galeria\Index.cshtml" />
+    <Content Include="Views\Conteudo\RevistasNewsletter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
