--- a/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
+++ b/Fontes/SitePortal/SitePortal/SitePortal/SitePortal.csproj
@@ -253,12 +253,20 @@
     <Content Include="Content\fancybox\fancy_title_right.png" />
     <Content Include="Content\fancybox\jquery-1.4.3.min.js" />
     <Content Include="Content\fancybox\jquery.easing-1.3.pack.js" />
-    <Content Include="Content\fancybox\jquery.fancybox-1.3.4.css" />
+    <Content Include="Content\fancybox\jquery.fancybox-1.3.4.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\fancybox\jquery.fancybox-1.3.4.js" />
     <Content Include="Content\fancybox\jquery.fancybox-1.3.4.pack.js" />
     <Content Include="Content\fancybox\jquery.mousewheel-3.0.4.pack.js" />
     <Content Include="Content\fancybox\style.css" />
     <Content Include="Images\Bg_GERAL.jpg" />
+    <Content Include="Images\Bt_divisoesEN.png" />
+    <Content Include="Images\Bt_divisoesES.png" />
+    <Content Include="Images\Bt_divisoesFR.png" />
+    <Content Include="Images\e2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\evento-default.png" />
     <Content Include="Images\facebook.svg" />
     <Content Include="Images\favicon.ico" />
